apps/jellyfin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jellyfin"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "jellyfin.png"
    gethomepage.dev/description: "Movies and shows"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-jellyfin
  hostnames:
    - jellyfin.stevevaradi.me
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseer
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jellyseerr"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "jellyseerr.png"
    gethomepage.dev/description: "Media requests"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=jellyseer"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-jellyseer
  hostnames:
    - jellyseer.stevevaradi.me
  rules:
    - backendRefs:
        - name: jellyseer-seerr-chart
          port: 5055
